# gabriels-caddi-worksample

gmaajid-caddi-worksample/: .gitignore  Dockerfile  Makefile  caddi-cli  pyproject.toml
gmaajid-caddi-worksample/config/: confirmed_mappings.yaml  ma_registry.yaml  reviewer.yaml  test_scenarios.yaml  test_scenarios_extended.yaml
gmaajid-caddi-worksample/data/demo/: demo_inspections.csv  demo_orders.csv  demo_rfq.csv
gmaajid-caddi-worksample/data/demo_extended/: demo_inspections.csv  demo_orders.csv  demo_rfq.csv
gmaajid-caddi-worksample/docs/: data_analysis.md  entity_resolution_performance.md  human_in_the_loop_guide.md  supplier_name_mapping.md  testing.md
gmaajid-caddi-worksample/docs/knowledge/: hoth_industries_context.md  human_review_system.md  supplier_clustering_lessons.md  supply_chain_concepts.md
gmaajid-caddi-worksample/docs/specs/: 2026-03-27-phase1-ai-procurement-design.md  2026-03-27-phase1-implementation-plan.md  2026-03-27-phase2a-implementation-plan.md  2026-03-27-phase2a-web-app-design.md
gmaajid-caddi-worksample/rag/: __init__.py  chunking.py  cli.py  config.py  core.py  llm.py  loaders.py
gmaajid-caddi-worksample/rag/tests/: test_cli.py  test_core_extra.py  test_llm.py  test_loaders.py  test_rag.py
gmaajid-caddi-worksample/src/: anchor_resolver.py  benchmark.py  chain_validator.py  clustering_snapshot.py  demo_generator.py  human_review.py  ma_registry.py  ma_resolver.py  models.py  supplier_clustering.py
gmaajid-caddi-worksample/web/: index.html  pty_manager.py  server.py  style.css  tutorial_engine.py
(+28 files in other folders)
